--- a/projects/Yoga/assets/css/style.css
+++ b/projects/Yoga/assets/css/style.css
@@ -765,7 +765,7 @@ img {
     appearance: none;
     background-color: #8E80A9;
     border: none;
-    border-radius: 0;
+    -webkit-border-radius: 0;
     font-size: 10px;
     color: #fff;
     text-decoration: none;
@@ -1904,7 +1904,7 @@ img {
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
-    border-radius: 0;
+    -webkit-border-radius: 0;
     background-color: transparent;
     border: none;
     border-bottom: 1px solid #8E80A9;
