--- a/projects/karnaval/assets/css/styles.css
+++ b/projects/karnaval/assets/css/styles.css
@@ -15,12 +15,10 @@
 }
 
 body {
-    display: flex;
-    flex-direction: column;
-    position: relative;
+    min-width: 1148px;
+    height: 100%;
     margin: 0;
     padding: 0;
-    min-height: 100vh;
     font-family: 'pt_root', Verdana, sans-serif;
     font-size: 14px;
     line-height: 18px;
@@ -55,10 +53,19 @@ input[type=tel] {
 
 .content-page-wrapper {
     flex: 1;
+    z-index: 2;
 }
 
 header, footer, nav {
     flex-shrink: 0;
+}
+
+header {
+    z-index: 4;
+}
+
+footer, nav {
+    z-index: 3;
 }
 
 h1 {
@@ -306,6 +313,7 @@ header {
 .header-adress {
     margin-right: 20px;
     font-weight: 500;
+    padding-bottom: 5px;
 }
 
 .header-phone-number {
@@ -368,6 +376,11 @@ header {
 .header-date-wrapper {
     position: relative;
     display: flex;
+    padding-bottom: 5px;
+}
+
+.header-date-wrapper:hover .header-date-timetable {
+    display: flex;
 }
 
 .header-date {
@@ -390,10 +403,6 @@ header {
     border-right: 1.5px solid #1D2F41;
     text-decoration: none;
     transform: rotate(45deg);
-}
-
-.header-date:hover ~ .header-date-timetable {
-    display: flex;
 }
 
 .header-white .header-date:after {
@@ -521,8 +530,12 @@ header {
 }
 
 .main-background {
+    width: 100%;
     background-image: url(../img/full-back-01.jpg);
     position: relative;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 .main-background:before, .main-background:after {
@@ -539,12 +552,12 @@ header {
 
 .main-background:before {
     background: linear-gradient(180deg, rgba(0, 0, 0, 0.51) 0%, rgba(0, 0, 0, 0.63) 50.89%, rgba(0, 0, 0, 0.51) 100%);
-    z-index: -1;
+    z-index: 1;
 }
 
 .main-background:after {
     background: linear-gradient(180deg, rgba(240, 144, 0, 0.3) 0%, rgba(207, 86, 3, 0.3) 26.04%, rgba(162, 6, 6, 0.255) 38.54%);
-    z-index: -2;
+    z-index: 0;
 }
 
 .catalog-background {
@@ -696,7 +709,7 @@ header {
 }
 
 .main-content {
-    padding: 145px 0 270px 0;
+    padding: 145px 0 50px 0;
     text-align: center;
     color: #fff;
     font-size: 25px;
